Fix EditCategoryItem button style on mobile

--- a/src/styles/components/_list.scss
+++ b/src/styles/components/_list.scss
@@ -34,6 +34,11 @@
   }
 }
 
+.list-item--space-between {
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 .list-item--no-link {
   &:hover {
     background: none;
